@@ -36,12 +36,19 @@ class TestOrgUnitSelector(unittest2.TestCase):
 
         self.assertEquals(self.unit_a, selector.get_current_unit())
 
-    def test_fallback_is_first_current_unit(self):
+    def test_fallback_is_first_of_intersection_between_users_and_current_adminunit_units(self):
         selector = OrgUnitSelector({},
-                                   [self.unit_b, self.unit_c],
-                                   [self.unit_a, self.unit_b])
+                                   [self.unit_a, self.unit_b],
+                                   [self.unit_a, self.unit_b, self.unit_c])
 
-        self.assertEquals(self.unit_b, selector.get_current_unit())
+        self.assertEquals(self.unit_a, selector.get_current_unit())
+
+    def test_fallback_is_first_current_unit_if_user_is_in_none_of_current_org_units(self):
+        selector = OrgUnitSelector({},
+                                   [self.unit_a],
+                                   [self.unit_b, self.unit_c])
+
+        self.assertEquals(self.unit_a, selector.get_current_unit())
 
     def test_current_unit_returns_fallback_when_storred_unit_is_not_part_of_the_current_units(self):
         selector = OrgUnitSelector({CURRENT_ORG_UNIT_KEY: 'clientb'},
